--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "express-favicon-short-circuit",
   "version": "1.0.0",
-  "description": "express-favicon-short-circuit",
+  "description": "express-favicon-short-circuit is an Express middleware that eliminates those annoying favicon requests",
   "main": "index.js",
   "scripts": {
     "coverage": "istanbul cover _mocha test/index.spec.js",
@@ -30,5 +30,12 @@
     "mocha": "^3.0.2",
     "nodemon": "^1.10.2",
     "sinon": "^1.17.5"
-  }
+  },
+  "keywords": [
+    "express",
+    "middleware",
+    "favicon",
+    "favicon.ico",
+    "short-circuit"
+  ]
 }
